// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/initialArgument > should tokenize optional command-argument syntax ("[...]") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "id": "",
      "required": false,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "[...]",
      "variadic": true,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "id": "",
      "required": false,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "[...]",
      "variadic": true,
    },
  ],
]
`;

exports[`integration:constructs/initialArgument > should tokenize optional command-argument syntax ("[]") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "required": false,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "[]",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "required": false,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "[]",
      "variadic": false,
    },
  ],
]
`;

exports[`integration:constructs/initialArgument > should tokenize optional command-argument syntax ("[n]") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "id": "n",
      "required": false,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "[n]",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "id": "n",
      "required": false,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "[n]",
      "variadic": false,
    },
  ],
]
`;

exports[`integration:constructs/initialArgument > should tokenize optional command-argument syntax ("[value...]") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 10,
        "_bufferIndex": -1,
      },
      "id": "value",
      "required": false,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "[value...]",
      "variadic": true,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 10,
        "_bufferIndex": -1,
      },
      "id": "value",
      "required": false,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "[value...]",
      "variadic": true,
    },
  ],
]
`;

exports[`integration:constructs/initialArgument > should tokenize required command-argument syntax ("<...>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "id": "",
      "required": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "<...>",
      "variadic": true,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "id": "",
      "required": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "<...>",
      "variadic": true,
    },
  ],
]
`;

exports[`integration:constructs/initialArgument > should tokenize required command-argument syntax ("<>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "required": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "<>",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": -1,
      },
      "id": "",
      "required": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "<>",
      "variadic": false,
    },
  ],
]
`;

exports[`integration:constructs/initialArgument > should tokenize required command-argument syntax ("<value...>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 10,
        "_bufferIndex": -1,
      },
      "id": "value",
      "required": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "<value...>",
      "variadic": true,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 10,
        "_bufferIndex": -1,
      },
      "id": "value",
      "required": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "<value...>",
      "variadic": true,
    },
  ],
]
`;

exports[`integration:constructs/initialArgument > should tokenize required command-argument syntax ("<x!>") 1`] = `
[
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 4,
        "_bufferIndex": -1,
      },
      "id": "x!",
      "required": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "<x!>",
      "variadic": false,
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 4,
        "_bufferIndex": -1,
      },
      "id": "x!",
      "required": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": -1,
      },
      "type": "argtax",
      "value": "<x!>",
      "variadic": false,
    },
  ],
]
`;
